# ioID-SDK

./: README.md
core/src/utils/: iotex_dev_access.c
doc/: How_to_Generate_a_DID_Document_Using_ioID-SDK.md  How_to_Generate_a_DID_for_a_device_Using_ioID-SDK.md  How_to_Generate_a_Verifiable_Credentials_Using_ioID-SDK.md
example/linux/: Readme.md
example/linux/solarfarm/: CMakeLists.txt  main.c  pro_config.h
example/linux/solarfarm/doc/: readme.md
example/linux/solarfarm/pal/: https.c  https.h  pal.c  pal.h
